# eating_helper

./: .gitignore  LICENSE  README.md  pyproject.toml  start.sh
backend/: .gitignore  pyproject.toml
backend/eating_helper/: food_group.py  main.py  meal_plan.py  mean_plan.py  recipes.py  usda_api.py
backend/eating_helper/google_api/: auth.py  calendar.py  tasks.py
backend/eating_helper/web_server/: main.py
eating_helper/: food_group.py  google_api.py  main.py  mean_plan.py  recipes.py  usda_api.py
eating_helper/data/: recipe.py
eating_helper/google_api/: auth.py  calendar.py  tasks.py
frontend/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/autogen/client/: index.ts
frontend/autogen/client/core/: ApiError.ts  ApiRequestOptions.ts  CancelablePromise.ts  OpenAPI.ts  request.ts
frontend/autogen/client/models/: GetRecipesResponse.ts  Nutrition.ts
frontend/autogen/client/services/: DefaultService.ts
frontend/components/: columns.tsx  icons.tsx  main-nav.tsx
frontend/components/ui/: card.tsx  data-table.tsx
frontend/config/: site.ts
