[tool.poetry]
name = "eating_helper"
version = "0.1.0"
description = "Helps me eat well"
authors = ["Ben Yang <ben.yang@utexas.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
PyYAML = "^6.0"
google-api-python-client = "^2.66.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.7.1"
requests-cache = "^0.9.7"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "eating_helper.main:main"
view = "eating_helper.main:view"
make = "eating_helper.main:make"

